--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "promise-polyfill": "7.1.1",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
+    "@ionic/app-scripts": "^3.1.8",
+    "dotenv": "^5.0.1",
+    "lodash": "^4.17.5",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -56,5 +59,8 @@
     "platforms": [
       "browser"
     ]
+  },
+  "config": {
+    "ionic_webpack": "./config/webpack.config.js"
   }
 }
